--- a/settings.gradle
+++ b/settings.gradle
@@ -17,6 +17,7 @@ include 'templates'
 include 'benchmarks'
 include 'dist'
 include 'macros'
+include 'jenkins'
 
 // Prefix all projects with sparkling-water name
 rootProject.children.each { project ->
