[SW-1434] Fix issues with getBucket (#1352)
(cherry picked from commit 1623692f0af7e56571cab5239abe129ddcced4b4)

--- a/gradle/utils.gradle
+++ b/gradle/utils.gradle
@@ -81,37 +81,33 @@ def getSparkSpecificResourceDir(sparkMajorVersion) {
     }
 }
 
-def getS3BucketPrefix() {
-    def prefix = "sparkling-water/spark-${spark}"
-
+def getS3Path() {
     def branch = getGitBranch()
     def formattedSWBranch = branch.replaceAll("/", "-")
-    def path
+    String path
     if (project.hasProperty("buildAgainstH2OBranch")) {
         def h2oBranch = project.property("buildAgainstH2OBranch")
         def formattedH2OBranch = h2oBranch.replaceAll("/", "-")
-        path = "${prefix}/${formattedSWBranch}_${formattedH2OBranch}"
+        path = "${formattedSWBranch}_${formattedH2OBranch}"
     } else {
         def majorVersion = "${version.split("\\.")[0]}.${version.split("\\.")[1]}"
         def relBranch = "rel-${majorVersion}"
         if (branch == relBranch) {
-            path = "${prefix}"
+            path = ""
         } else {
-            path = "${prefix}/${formattedSWBranch}"
+            path = "${formattedSWBranch}"
         }
     }
     if (isNightlyBuild) {
-        return "${path}/nightly"
-    } else {
-        return path
+        path = "${path}/nightly"
     }
+
+    if (path != "") {
+        path = "${path}/"
+    }
+    return path
 }
 
-def getS3Bucket() {
-    def prefix = getS3BucketPrefix()
-    return "${prefix}/${version}"
-
-}
 // Export methods by turning them into closures
 ext {
     getOsSpecificCommandLine = this.&getOsSpecificCommandLine
@@ -124,6 +120,5 @@ ext {
     getSupportedHadoopDistributions = this.&getSupportedHadoopDistributions
     getSparkSpecificSourceDir = this.&getSparkSpecificSourceDir
     getSparkSpecificResourceDir = this.&getSparkSpecificResourceDir
-    getS3Bucket = this.&getS3Bucket
-    getS3BucketPrefix = this.&getS3BucketPrefix
+    getS3Path = this.&getS3Path
 }
