--- a/build.gradle
+++ b/build.gradle
@@ -111,6 +111,7 @@ def loadVersion(versionSpecificProps) {
     }
 }
 
+
 def getSparkMajorVersion(versionSpecificProps) {
     def sparkVersion = loadVersionSpecificProp("sparkVersion", versionSpecificProps)
     return sparkVersion.count(".") == 1 ? sparkVersion : sparkVersion.substring(0, sparkVersion.lastIndexOf('.'))
@@ -118,7 +119,7 @@ def getSparkMajorVersion(versionSpecificProps) {
 //
 // For all projects (this and all subprojects) specify common properties and tasks
 //
-def loadedVersion = loadVersion(versionSpecificProps)
+def loadedVersion = loadVersion(versionSpecificProps).replace("-SNAPSHOT", "")
 
 configure(allprojects) { project ->
     apply plugin: 'idea'
@@ -150,7 +151,7 @@ configure(allprojects) { project ->
     }
 
     // All project inherits the same versioning number
-    version = loadedVersion.replace("-SNAPSHOT", "")
+    version = loadedVersion
 }
 
 //
