--- a/gradle/utils.gradle
+++ b/gradle/utils.gradle
@@ -99,7 +99,11 @@ def getS3Path() {
         }
     }
     if (isNightlyBuild) {
-        path = "${path}/nightly"
+        if (path != "") {
+            path = "${path}/nightly"
+        } else {
+            path = "nightly"
+        }
     }
 
     if (path != "") {
