[HOTFIX] Nightly builds fix

--- a/gradle.properties
+++ b/gradle.properties
@@ -19,6 +19,8 @@ testMojoPipeline=false
 org.gradle.daemon=false
 # Version of docker image used in Jenkins tests
 dockerImageVersion=17
+# Is this build nightly build
+isNightlyBuild=false
 # Supported Major Spark Versions
 supportedSparkVersions=2.1 2.2 2.3 2.4
 # Select for which Spark version is Sparkling Water built by default
