[SW-1436] Fix warninig in python package as SW version no longer starts with spark major version

--- a/py/build.gradle
+++ b/py/build.gradle
@@ -78,7 +78,7 @@ task createVersionFile {
         }
         File version_file = new File(versionFileDir, "version.txt")
 
-        def version_txt = version.substring(0, version.lastIndexOf("-"))
+        def version_txt = version
         version_file.write(version_txt)
     }
 }
