[SW-1461] prepare ai.h2o.sparkling structure on PySpakrling side

--- a/py/build.gradle
+++ b/py/build.gradle
@@ -150,6 +150,7 @@ def copyPySetup() {
             include 'setup.cfg'
             include 'pysparkling/**/*'
             include 'py_sparkling/**/*'
+            include 'ai/**/*'
             exclude '**/*.pyc'
         }
         into pkgDir
