--- a/gradle/release.gradle
+++ b/gradle/release.gradle
@@ -7,7 +7,7 @@
 apply plugin: 'net.researchgate.release'
 
 release {
-    tagTemplate = 'RELEASE-$version'
+    tagTemplate = "RELEASE-$version-${spark}"
     // Safe point - do releases only from release branch - can be deleted in future
     failOnUnversionedFiles = false
     failOnCommitNeeded = false
