--- a/utils/build.gradle
+++ b/utils/build.gradle
@@ -6,6 +6,8 @@ apply from: "$rootDir/gradle/utils.gradle"
 dependencies {
     compileOnly "org.apache.spark:spark-core_${scalaBaseVersion}:${sparkVersion}"
     compileOnly "org.apache.spark:spark-mllib_${scalaBaseVersion}:${sparkVersion}"
+
+    compile "org.scala-lang:scala-compiler:${scalaVersion}"
 }
 
 defineStandardPublication().call()
