[SW-1368] Preparation for scoring package (#1393)
(cherry picked from commit f9bf240a7f29a20f3beae5f56b22f3dc79c67a84)

--- a/settings.gradle
+++ b/settings.gradle
@@ -18,6 +18,7 @@ include 'benchmarks'
 include 'dist'
 include 'macros'
 include 'jenkins'
+include 'utils'
 
 // Prefix all projects with sparkling-water name
 rootProject.children.each { project ->
