--- a/benchmarks/build.gradle
+++ b/benchmarks/build.gradle
@@ -2,6 +2,7 @@ description = "Sparkling Water Benchmarks"
 
 apply plugin: 'com.github.johnrengelman.shadow'
 apply from: "$rootDir/gradle/shadowRuntime.gradle"
+apply from: "$rootDir/gradle/utils.gradle"
 
 dependencies {
 
@@ -32,4 +33,27 @@ shadowJar {
     exclude 'www/flow/packs/test-*/**'
 }
 
+task substituteTerraform() {
+    doLast {
+        def tfBaseDir = "${project.buildDir.toString()}/terraform/aws/"
+        def tfScripts = ["${tfBaseDir}/variables.tf", "${tfBaseDir}/modules/emr/variables.tf", "${tfBaseDir}/modules/emr/main.tf"]
+        tfScripts.each { path ->
+            def contents = file(path).getText('UTF-8')
+            contents = contents
+                    .replaceAll("SUBST_EMR_VERSION", supportedEmrVersion)
+            
+            file(path).write(contents, 'UTF-8')
+        }
+    }
+}
+
+task copyTerraform(type: Copy) {
+    from 'src/main/terraform'
+    include "**/*.tf"
+    into "build/terraform"
+}
+
+substituteTerraform.dependsOn copyTerraform
+build.dependsOn substituteTerraform
 build.dependsOn shadowJar
+
