[SW-1502] Upgrade to mojo2 library v2.1.3

--- a/gradle.properties
+++ b/gradle.properties
@@ -8,12 +8,10 @@ h2oMajorName=yau
 h2oBuild=2
 # Scala version for Sparkling Water. By default, for 2.11 we use 2.11.12.
 scalaBaseVersion=2.11
-# Internal Nexus location
-localNexusLocation=http://nexus:8081/nexus/repository
 # Version of Mojo Pipeline library
-mojoPipelineVersion=0.13.16
+mojoPipelineVersion=2.1.3
 # Defines whether to run tests with Driverless AI mojo pipelines
-# These tests require license and runtime jar artifact
+# These tests require the Driverless AI license
 testMojoPipeline=false
 # Disable execution of the gradle daemon
 org.gradle.daemon=false
