--- a/scoring/build.gradle
+++ b/scoring/build.gradle
@@ -8,6 +8,7 @@ dependencies {
     compileOnly project(":sparkling-water-macros")
 
     compile "ai.h2o:mojo2-runtime-api:${mojoPipelineVersion}"
+    compile "ai.h2o:mojo2-runtime-impl:${mojoPipelineVersion}"
     compile "ai.h2o:h2o-genmodel:${h2oVersion}"
     compile project(":sparkling-water-utils")
 }
