[SW-1501] Check the case of JAR being attached prior the start of PySparkling

--- a/py/build.gradle
+++ b/py/build.gradle
@@ -72,7 +72,7 @@ task resolveTestRuntimeDependencies {
 //
 task createVersionFile {
     doLast {
-        def versionFileDir = new File(pkgDir, "pysparkling")
+        def versionFileDir = new File(pkgDir, "ai/h2o/sparkling")
         if (!versionFileDir.exists()) {
             versionFileDir.mkdirs()
         }
