--- a/py/MANIFEST.in
+++ b/py/MANIFEST.in
@@ -1,6 +1,6 @@
 # include additional files which are not fetched by default by setuptools
 
 # We need to manually specify version files for h2o and sparkling water to make sdist and pip happy
-include pysparkling/version.txt
+include ai/h2o/sparkling/version.txt
 include h2o/version.txt
 include h2o/buildinfo.txt
