Relocation of com.google.protobuf for MOJO2

--- a/ml/build.gradle
+++ b/ml/build.gradle
@@ -21,10 +21,10 @@ dependencies {
 
 
     compile "ai.h2o:mojo2-runtime-api:${mojoPipelineVersion}"
-    runtime "ai.h2o:mojo2-runtime-impl:${mojoPipelineVersion}"
+    compile "ai.h2o:mojo2-runtime-impl:${mojoPipelineVersion}"
     
     testCompile "ai.h2o:mojo2-runtime-api:${mojoPipelineVersion}"
-    testRuntime "ai.h2o:mojo2-runtime-impl:${mojoPipelineVersion}"
+    testCompile "ai.h2o:mojo2-runtime-impl:${mojoPipelineVersion}"
     
     // And use scalatest for Scala testing
     testCompile "org.scalatest:scalatest_${scalaBaseVersion}:2.2.1"
