--- a/benchmarks/build.gradle
+++ b/benchmarks/build.gradle
@@ -30,6 +30,7 @@ shadowJar {
     relocate 'org.eclipse.jetty', 'ai.h2o.org.eclipse.jetty'
     relocate 'org.eclipse.jetty.orbit', 'ai.h2o.org.eclipse.jetty.orbit'
 
+    from "$project.buildDir/resources/main" include '**/*'
     exclude 'www/flow/packs/test-*/**'
 }
 
@@ -40,6 +41,7 @@ task substituteTerraform() {
         tfScripts.each { path ->
             def contents = file(path).getText('UTF-8')
             contents = contents
+                .replaceAll("SUBST_PACKAGE_FILE", "${project.buildDir.toString()}/libs/sparkling-water-benchmarks_$scalaBaseVersion-$version-all.jar")
                 .replaceAll("SUBST_SW_VERSION", version)
                 .replaceAll("SUBST_SCALA_VERSION", scalaBaseVersion)
                 .replaceAll("SUBST_EMR_VERSION", supportedEmrVersion)
