--- a/settings.gradle
+++ b/settings.gradle
@@ -28,3 +28,5 @@ rootProject.children.each { project ->
     }
     project.name = rootProject.name + "-" + project.name 
 }
+
+includeBuild '/Users/kuba/devel/repos/h2o-3'
